# motor_suites

./: .gitignore  CMakeLists.txt  README.md
suite_application/: 00_window.cpp  01_window_listener.cpp  02_window_listener.cpp  CMakeLists.txt
suite_audio/: 00_simple_audio_gen.cpp  01_simple_audio_gen.cpp  02_audio_capture_helper.cpp  03_audio_capture_visual.cpp  CMakeLists.txt
suite_basics/: CMakeLists.txt
suite_basics/00_basic_allocator/: CMakeLists.txt  main.cpp
suite_basics/00_memory/: CMakeLists.txt  main.cpp
suite_basics/01_basics/: CMakeLists.txt  main.cpp
suite_basics/02_containers/: main.cpp
suite_basics/03_some_basic_tests/: CMakeLists.txt  main.cpp
suite_basics/04_vector_pod/: main.cpp
suite_basics/05_static_ids/: CMakeLists.txt  main.cpp
suite_basics/06_00_double_dispatch/: main.cpp
suite_basics/06_01_double_dispatch/: main.cpp
suite_basics/07_00_meta/: main.cpp
suite_basics/07_document/: main.cpp
suite_concurrent/: 00_test_task.cpp  01_parallel_for.cpp  02_tasks.cpp  03_tasks.cpp  04_thread_pool.cpp  05_parallel_for.cpp  06_loose_scheduler.cpp  CMakeLists.txt
suite_concurrent/00_test_task/: main.cpp
suite_concurrent/01_parallel_for/: CMakeLists.txt  main.cpp
suite_concurrent/03_tasks/: CMakeLists.txt
suite_controls/: 00_devices.cpp  01_gamepad.cpp  02_gamepad2.cpp  03_gamepad3.cpp  04_window_and_device.cpp  05_window_and_gamepad.cpp  06_00_midi_observer.cpp  06_01_midi_akai.cpp  06_02_midi_korg.cpp  06_midi_device.cpp  CMakeLists.txt
suite_core/: CMakeLists.txt
suite_device/: 00_devices.cpp  01_gamepad.cpp  02_gamepad2.cpp  03_gamepad3.cpp  04_window_and_device.cpp  05_window_and_gamepad.cpp  06_midi_device.cpp  CMakeLists.txt
suite_format/: 00_format_load.cpp  01_sprite_sheet.cpp  02_aseprite_json_import.cpp  03_wavefront_obj.cpp  04_gltf.cpp  CMakeLists.txt
suite_geometry/: 00_geometry.cpp  01_vis_convex_hull_2d.cpp  02_00_vis_ear_triangulation_2d.cpp  02_01_vis_ear_triangulation_2d.cpp  02_vis_ear_triangulation_2d.cpp  02_vis_failed_triangulation_2d.cpp  02_vis_triangulation_2d.cpp  CMakeLists.txt
suite_gfx/: 00_text_renderer.cpp  01_01_primitive_renderer_2d.cpp  01_primitive_renderer.cpp  01_primitive_renderer_2d.cpp  02_primitive_renderer_3d.cpp  02_sprite_renderer.cpp  03_sprite_renderer.cpp  03_sprite_sheet.cpp  04_sprite_sheet.cpp  05_spline_rendering_3d.cpp  06_keyframes_3d.cpp  CMakeLists.txt  README.md
suite_graphics/: 00_simple_rendering.cpp  01_simple_msl.cpp  01_simple_rendering_two_window.cpp  02_framebuffer.cpp  02_simple_msl.cpp  03_01_multi_geometry.cpp  03_02_multi_geometry.cpp  03_multi_geometry.cpp  03_two_window_msl.cpp  04_framebuffer.cpp  04_framebuffer_mrt.cpp  05_array_object_raw.cpp  05_multi_geometry.cpp  06_array_object.cpp  06_framebuffer_mrt.cpp  07_texture_array_raw.cpp  08_texture_array.cpp  09_00_stream_out.cpp  09_01_stream_out.cpp  09_02_stream_out.cpp  09_03_stream_out.cpp  10_00_gs_pass_through_raw.cpp  10_01_gs_pass_through.cpp  10_02_gs_generate.cpp  10_03_gs_streamout.cpp  11_msl_auto.cpp  12_msl_libraries.cpp  13_msl_buildins_1.cpp  13_msl_buildins_2.cpp  14_noise_texture.cpp  15_wire_shader_slots.cpp  16_ghosting.cpp  CMakeLists.txt  README.md
suite_graphics/working/shaders/: 11_msl_auto.msl  12_msl_libraries.math.msl  12_msl_libraries.mylib.msl  12_msl_libraries.render.msl  13_msl_buildins_1.render.msl  13_msl_buildins_2.render.msl  15_wire_shader_slots.msl
suite_io/: 00_database.cpp  00_load.cpp  01_load_store.cpp  02_async.cpp  03_database_init.cpp  04_database_load.cpp  05_database_monitor.cpp  05_database_pack.cpp  06_database_pack.cpp  CMakeLists.txt  data.mdb
suite_io/working/: some_info2.txt
suite_math/: 00_coord_system.cpp  00_vector.cpp  01_matrix.cpp  02_angle.cpp  03_spline_keyframe.cpp  04_spline_keyframe.cpp  05_quaternion.cpp  CMakeLists.txt  w_00_simd.cpp
suite_memory/: 00_mtr.cpp  01_container.cpp  02_memory_observer.cpp  CMakeLists.txt
suite_memory/00_mtr/: main.cpp
suite_msl/: 00_msl_basics.cpp  01_msl_from_file.cpp  02_noise_buildins.cpp  02_parser_test.cpp  CMakeLists.txt  x2_msl_in_app.cpp  x2_msl_with_bridge.cpp
suite_network/: 00_client_localhost.cpp  00_server_localhost.cpp  01_client_twitch_irc.cpp  02_client_twitch_irc.cpp  03_client_in_app.cpp  CMakeLists.txt  twitch.credentials.in  twitch.in.tokens  xx_server_localhost_just_listen.cpp
suite_network/working/: twitch_tokens.txt  twtich_tokens.txt
suite_noise/: 00_permutation_table.cpp  01_value_noise.cpp  02_gradient_noise.cpp  03_fbm.cpp  CMakeLists.txt
suite_platform/: 00_platform_window.cpp  01_platform_window.cpp  02_platform_window_cursor.cpp  03_context.cpp  03_cpu_id.cpp  03_wgl_context.cpp  04_multi_wgl_windows.cpp  04_multi_windows.cpp  CMakeLists.txt
suite_profile/: 00_manager.cpp  01_vector_timing.cpp  02_hierarchy.cpp  CMakeLists.txt
suite_proto/: 00_world_2d.cpp  01_picking_2d.cpp  02_branching_spline.cpp  CMakeLists.txt  README.md
suite_proto/00_world_2d/: world.h
suite_scene/: 00_base_test.cpp  01_scene_render.cpp  02_scene_variables.cpp  03_scene_animation.cpp  04_scene_animation.cpp  04_scene_gltf.cpp  05_scene_gltf.cpp  CMakeLists.txt
suite_scene/working/gltf/scaled_cube/: scaled_cube.gltf
suite_scene/working/gltf/simple_camera/: simple_camera.gltf
suite_scene/working/gltf/some_tests/: animated_cube.gltf  camera_on_path_and_lookat.gltf  gears_corrected.gltf  scaled_cube.gltf  scene2.gltf  test.gltf
suite_social/: 00_twitch_irc_parser.cpp  CMakeLists.txt
suite_tool/: 00_imgui.cpp  01_imgui.cpp  02_profiling.cpp  03_sprite_editor.cpp  04_00_imnodes_wire.cpp  04_01_imnodes_wire.cpp  04_02_imnodes_wire.cpp  04_imnodes_wire.cpp  05_imgui_properties.cpp  05_imgui_scene_visitor.cpp  05_imnodes_wire.cpp  06_imgui_scene_visitor.cpp  CMakeLists.txt
suite_various/: 00_wavefront_obj_rendering.cpp  01_picking_2d.cpp  02_branching_spline.cpp  03_particle_system.cpp  CMakeLists.txt
suite_wire/: 00_wire.cpp  01_wire.cpp  01_wire_node.cpp  02_wire_node.cpp  03_wire_node_w_slots.cpp  04_variables.cpp  CMakeLists.txt
techniques/: 00_camera_movement.cpp  (+1 more)
(+15 files in other folders)
